chore: change signed state sentinel trigger (#21196)
Signed-off-by: Lazar Petrovic <lpetrovic05@gmail.com>